java 17, dependencies upgrade