@@ -1,36 +1,46 @@
 plugins {
 	id "application"
 	id "checkstyle"
+	id "pmd"
 }
 
 mainClassName = "org.bool.lunch.Main"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(17)
+	}
+	withSourcesJar()
+}
+
+test {
+	useJUnitPlatform()
+}
+
+jar {
+	manifest {
+		attributes("Automatic-Module-Name": "org.bool.lunch.core")
+		attributes("Add-Opens": "java.base/jdk.internal.loader=org.bool.lunch.core")
+	}
+}
 
 checkstyle {
-	configDir file("${rootDir}/gradle/config/checkstyle")
-	toolVersion "8.33"
+	configDirectory = file("gradle/config/checkstyle")
+	toolVersion = "10.12.1"
 }
 
 repositories {
 	mavenCentral()
-	maven {
-		url "https://dl.bintray.com/boolivar/java"
-	}
 }
 
 dependencies {
 	ext["akkaVersion"] = "2.5.27"
 	ext["scalaVersion"] = "2.12"
 	ext["scalecubeVersion"] = "2.8.10"
-	ext["mockitoVersion"] = "3.3.3"
-	
-	implementation platform("org.junit:junit-bom:5.6.1")
-	
+	ext["mockitoVersion"] = "5.5.0"
+
 	implementation "org.apache.commons:commons-lang3:3.9"
-	implementation "org.bool.jpid:jpid-utils:1.0.1"
-	implementation "org.slf4j:slf4j-api:1.7.25"
+	implementation "org.slf4j:slf4j-api:2.0.9"
 	implementation "com.esotericsoftware.yamlbeans:yamlbeans:1.13"
 	implementation "com.hierynomus:sshj:0.29.0"
 	implementation "com.lightbend.akka.management:akka-management-cluster-http_${scalaVersion}:1.0.6"
@@ -42,8 +52,9 @@ dependencies {
 	implementation "io.scalecube:scalecube-services-discovery:${scalecubeVersion}"
 	implementation "io.scalecube:scalecube-services-transport-jackson:${scalecubeVersion}"
 	implementation "io.scalecube:scalecube-services-transport-rsocket:${scalecubeVersion}"
-	
-	runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
+	implementation "commons-io:commons-io:2.13.0"
+
+	runtimeOnly "org.springframework.boot:spring-boot-starter-logging:3.1.3"
 	runtimeOnly "com.typesafe.akka:akka-slf4j_${scalaVersion}:${akkaVersion}"
 	runtimeOnly "org.slf4j:log4j-over-slf4j:1.7.25"
 
@@ -55,10 +66,8 @@ dependencies {
 		exclude group: "log4j", module: "log4j"
 	}
 
-	testImplementation "org.junit.jupiter:junit-jupiter-api"
+	testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
 	testImplementation "org.mockito:mockito-core:${mockitoVersion}"
 	testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
-	
-	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
-	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+	testImplementation "org.assertj:assertj-core:3.24.2"
 }
